Changed service name to bushidoio_pdf

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 services:
-    bushidoio_pdf.service:
+    bushidoio_pdf:
         class: BushidoIO\PDFBundle\Service\PDFService
         calls:
             - [ setContainer, [ @service_container ] ]
