The reserved indicator "@" cannot start a plain scalar

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,4 +2,4 @@ services:
     bushidoio_pdf:
         class: BushidoIO\PDFBundle\Service\PDFService
         calls:
-            - [ setContainer, [ @service_container ] ]
+            - [ setContainer, [ "@service_container" ] ]
